--- a/TODO.txt
+++ b/TODO.txt
@@ -1,13 +1,16 @@
-Сделать
-check_sntp
-check_arp_table
-check_route_table
-для DGS3100
+Сделать:
+- для DGS3100
+    check_sntp
+    check_arp_table
+    check_route_table
 
-Завести класс для RouterOS с RouterOS api
+- Вносить данные в SQL
 
-Вносить данные в SQL
+- Сделать многопоточное сканирование по подсетям
 
-Сделать многопоточное сканирование по подсетям
+- Переделать сканирование сервисов, чтобы происходило параллельно
+    - ping
+    - snmp
 
-Переделать сканирование сервисов, чтобы происходило параллельно
+
++Завести класс для RouterOS с RouterOS api
