Fix bug with routeros api connect

--- a/TODO.txt
+++ b/TODO.txt
@@ -6,11 +6,12 @@
 
 - Вносить данные в SQL
 
-- Сделать многопоточное сканирование по подсетям
++ Сделать многопоточное сканирование по подсетям
 
-- Переделать сканирование сервисов, чтобы происходило параллельно
-    - ping
-    - snmp
++ Переделать сканирование сервисов, чтобы происходило параллельно
+    + ping
+    + snmp
+    - решить ограничение windows(64 для select())
 
 
 +Завести класс для RouterOS с RouterOS api
